--- a/Test.Domain/Test.Domain.csproj
+++ b/Test.Domain/Test.Domain.csproj
@@ -8,7 +8,7 @@
 
   <ItemGroup>
     <Folder Include="IRepositories\" />
-    <Folder Include="Models\User\" />
+    <Folder Include="Models\Product\" />
     <Folder Include="ViewModel\" />
   </ItemGroup>
 
